syntax = "proto3";
import "google/protobuf/wrappers.proto";
import "google/api/annotations.proto";

package rusprofile_parser;

option go_package = "./api";

service ClubsInfo {
  rpc getCompany(INNCompany) returns (CompanyInfo) {
    option (google.api.http) = {
      get:"/v1/inncompany/{INN}"
    };
  };
}

message INNCompany {
  string INN = 1;
}

message CompanyInfo {
  string INN = 1;
  string KPP = 2;
  string CompanyName = 3;
  string FullNameManager = 4;
}